--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/dracomalar93/web-dev-portfolio"
   },
   "keywords": [],
-  "author": "Jacobo Martinez",
+  "author": "Christian Waite",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dracomalar93/web-dev-portfolio"
